week 02 individual assignment update
